apps/kargo/httproute-kargo.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway # Using central gateway in "gateway" namespace
      name: core
      sectionName: https
  hostnames:
    - kargo.nodes.ee
  rules:
    - backendRefs:
        - name: kargo-api
          port: 80
          weight: 1
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
